[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/core/DeckBuilder/DBFilterLine.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/core/DeckBuilder/DeckBuilder.gd" type="Script" id=4]
[ext_resource path="res://src/core/DeckBuilder/DeckNameRandomizer.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 15
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxLine" id=4]
color = Color( 1, 0.4, 0, 1 )
thickness = 2

[sub_resource type="DynamicFont" id=5]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 14
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[node name="DeckBuilder" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
deck_name_randomizer = ExtResource( 5 )

[node name="VBC" type="VBoxContainer" parent="."]
margin_right = 1700.0
margin_bottom = 900.0

[node name="Title" type="Label" parent="VBC"]
margin_right = 1700.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 2 )
text = "Deck Builder"
align = 1

[node name="HBC" type="HBoxContainer" parent="VBC"]
margin_top = 41.0
margin_right = 1700.0
margin_bottom = 900.0
size_flags_vertical = 3

[node name="MC" type="MarginContainer" parent="VBC/HBC"]
margin_right = 848.0
margin_bottom = 859.0
size_flags_horizontal = 3
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="CurrentDeck" type="VBoxContainer" parent="VBC/HBC/MC"]
margin_left = 5.0
margin_right = 848.0
margin_bottom = 854.0
size_flags_horizontal = 3

[node name="DeckDetails" type="VBoxContainer" parent="VBC/HBC/MC/CurrentDeck"]
margin_right = 843.0
margin_bottom = 18.0

[node name="CardCount" type="Label" parent="VBC/HBC/MC/CurrentDeck/DeckDetails"]
margin_right = 843.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 3 )
text = "0 Cards (min 52)"

[node name="LineSeparator2" type="Panel" parent="VBC/HBC/MC/CurrentDeck"]
margin_top = 22.0
margin_right = 843.0
margin_bottom = 22.0
custom_styles/panel = SubResource( 4 )

[node name="CardsInDeck" type="VBoxContainer" parent="VBC/HBC/MC/CurrentDeck"]
margin_top = 26.0
margin_right = 843.0
margin_bottom = 770.0
size_flags_vertical = 3

[node name="DeckNameEditLabel" type="Label" parent="VBC/HBC/MC/CurrentDeck"]
margin_top = 774.0
margin_right = 843.0
margin_bottom = 793.0
custom_fonts/font = SubResource( 5 )
text = "Name"

[node name="DeckNameEdit" type="LineEdit" parent="VBC/HBC/MC/CurrentDeck"]
margin_top = 797.0
margin_right = 843.0
margin_bottom = 824.0
custom_fonts/font = SubResource( 6 )
text = "New Deck"
max_length = 128

[node name="Buttons" type="HBoxContainer" parent="VBC/HBC/MC/CurrentDeck"]
margin_top = 828.0
margin_right = 843.0
margin_bottom = 854.0

[node name="Save" type="Button" parent="VBC/HBC/MC/CurrentDeck/Buttons"]
margin_right = 54.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 7 )
text = "Save"

[node name="Load" type="MenuButton" parent="VBC/HBC/MC/CurrentDeck/Buttons"]
margin_left = 58.0
margin_right = 110.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 7 )
text = "Load"

[node name="Reset" type="Button" parent="VBC/HBC/MC/CurrentDeck/Buttons"]
margin_left = 114.0
margin_right = 175.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 7 )
text = "Reset"

[node name="MC2" type="MarginContainer" parent="VBC/HBC"]
margin_left = 852.0
margin_right = 1700.0
margin_bottom = 859.0
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_bottom = 5

[node name="AvailableCards" type="VBoxContainer" parent="VBC/HBC/MC2"]
margin_right = 838.0
margin_bottom = 854.0
size_flags_horizontal = 3

[node name="FilterLine" type="LineEdit" parent="VBC/HBC/MC2/AvailableCards"]
margin_right = 838.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 6 )
placeholder_text = "Filter the list"
script = ExtResource( 1 )

[node name="CC" type="CenterContainer" parent="VBC/HBC/MC2/AvailableCards"]
margin_top = 31.0
margin_right = 838.0
margin_bottom = 31.0
size_flags_horizontal = 3

[node name="ButtonFilters" type="HBoxContainer" parent="VBC/HBC/MC2/AvailableCards/CC"]
margin_left = 419.0
margin_right = 419.0

[node name="CardListHeaders" type="HBoxContainer" parent="VBC/HBC/MC2/AvailableCards"]
margin_top = 35.0
margin_right = 838.0
margin_bottom = 54.0
custom_constants/separation = 60

[node name="Quantity" type="Label" parent="VBC/HBC/MC2/AvailableCards/CardListHeaders"]
margin_right = 74.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 5 )
text = "Quantity"

[node name="Name" type="Label" parent="VBC/HBC/MC2/AvailableCards/CardListHeaders"]
margin_left = 134.0
margin_right = 737.0
margin_bottom = 19.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
text = "Name"

[node name="Type" type="Label" parent="VBC/HBC/MC2/AvailableCards/CardListHeaders"]
margin_left = 797.0
margin_right = 838.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 5 )
text = "Type"

[node name="LineSeparator" type="Panel" parent="VBC/HBC/MC2/AvailableCards"]
margin_top = 58.0
margin_right = 838.0
margin_bottom = 58.0
custom_styles/panel = SubResource( 4 )

[node name="ScrollContainer" type="ScrollContainer" parent="VBC/HBC/MC2/AvailableCards"]
margin_top = 62.0
margin_right = 838.0
margin_bottom = 854.0
size_flags_vertical = 3

[node name="CardList" type="VBoxContainer" parent="VBC/HBC/MC2/AvailableCards/ScrollContainer"]
margin_right = 838.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBC/HBC/MC/CurrentDeck/Buttons/Save" to="." method="_on_Save_pressed"]
[connection signal="about_to_show" from="VBC/HBC/MC/CurrentDeck/Buttons/Load" to="." method="_on_Load_about_to_show"]
[connection signal="pressed" from="VBC/HBC/MC/CurrentDeck/Buttons/Reset" to="." method="_on_Reset_pressed"]
